EUR-4 S3 use component computed by witboost as bucket folder
# New features and improvements

- The name of the folder created by the tech adapter is now the same as the normalized name of the component we find in its ID
- Removed unused “accountId” field from specific section
- Validation checks if the bucket already exists in a different region than the request region and if it does, it returns an error
- Managed bucket versioning option at creation stage

# Related issue

Closes EUR-4

Closes EUR-13

# Definition of Done

So you are going to put your MR in review, but are you sure you have done all things listed here?

## All Developments

- [x] **Feature was implemented as per the requirements**
- [x] **If some code parts are complex they must be commented with code documentation**
- [x] **Unit, integration and E2E tests have been performed and code coverage is not reduced**, so that new code is covered
- [x] **CI/CD is successful**
- [x] **Exceptions and errors are handled, returning meaningful errors to the user**, without letting the underlying framework to respond with a generic Internal Server Error. Technical details are stored in the errors/problems and not in the user message
- [ ] **Documentation (user documentation, HLD and others) has been updated**
  - Documentation has been updated with explanation of the new feature if it's user-facing (e.g. component now has additional setting) or it impacts them in some other way (e.g. optional field that becomes mandatory)
  - If it is a breaking change, we have documented it as such in the MR description in a "Breaking Changes" section
- [ ] **Helm chart and other DevOps artifacts** have been updated and are valid deployment tools for the new version
- [x] **Problematic information (sensitive information, credentials, customer information or other intellectual property) is not included in the changes** as they could end up being public (most SPs are already published and automatically mirrored on every merge)
-